fix: fix header z-index

--- a/practice-2/src/assets/css/layout/header.css
+++ b/practice-2/src/assets/css/layout/header.css
@@ -50,6 +50,7 @@
 }
 
 .header {
+    position: relative;
     display: grid;
     grid-template-areas: "logo navbar";
     align-self: stretch;
